--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "form-data": "^4.0.4",
+    "googleapis": "^105.0.0",
     "multer": "^2.0.2",
     "node-tesseract-ocr": "^2.2.1",
     "sharp": "^0.34.5"
